--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,7 @@
-{
-  "name": "free4talk-server",
-  "version": "1.0.0",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "dependencies": {
-    "express": "^4.18.2",
-    "socket.io": "^4.7.2"
-  }
+"homepage": "https://sagouda987.github.io/TalkNow",
+"scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist"
 }
