--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,8 @@
     "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
-    "vite": "^4.4.0",
     "@vitejs/plugin-react": "^4.0.0",
-    "gh-pages": "^6.0.0"
+    "gh-pages": "^6.3.0",
+    "vite": "^4.4.0"
   }
 }
